# pamila

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  install.bash  pyproject.toml
doc/: hla_flow_concept.md
examples/: 00_setup_machine_config.ipynb  01_mlv_basics.ipynb  02_bluesky_wrapper.ipynb  03_mlvl.ipynb  04_mlvt.ipynb  05_setup_mlvl_mlvt.ipynb  06_hla_orbit.ipynb  07_setup_hla_disp_chrom.ipynb  08_hla_disp_chrom.ipynb  09_setup_MIMO_magnet.ipynb  gui_config_builder.py
examples/conv_plugins/: ID23d_repr_convs.py
examples/lattice_files/: nsls2_girders4d_pyATv0_6_1.mat
examples/nb_gen/: 00_setup_machine_config.py  01_mlv_basics.py  02_bluesky_wrapper.py  03_mlvl.py  04_mlvt.py  05_setup_mlvl_mlvt.py  06_hla_orbit.py  07_setup_hla_disp_chrom.py  08_hla_disp_chrom.py  09_setup_MIMO_magnet.py  README.md  auto_gen_notebooks.py  test_run_all_scripts.py
speed_test/: test_mlvs.py  test_pint.py  test_pvs.py
src/pamila/: __init__.py  machine.py  machine_modes.py  serialization.py  signal.py  timer.py  unit.py  utils.py
src/pamila/bluesky_wrapper/: __init__.py  ophyd_layer.py  run_engine.py  set_utils.py  timer.py
src/pamila/device/: __init__.py  base.py  simple.py  specs.py
src/pamila/device/conversion/: __init__.py  (+2 more)
src/pamila/facility_configs/: __init__.py  generator.py  loader.py
src/pamila/hla/: __init__.py
src/pamila/middle_layer/: __init__.py  element.py  var_list.py  var_tree.py  variable.py
src/pamila/ophyd_shim/: __init__.py  _pyepics_shim.py
src/pamila/sim_interface/: __init__.py  pyat.py
src/pamila/tiled/: __init__.py  write.py
(+13 files in other folders)
