[tool.poetry]
name = "pamila"
version = "0.1.0"
description = "Particle Accelerator MIddle LAyer (PAMILA) - Python middle layer package for control of particle accelerators, compatible with bluesky / ophyd / tiled"
authors = ["Yoshiteru Hidaka <yhidaka@bnl.gov>"]
maintainers = ["Yoshiteru Hidaka <yhidaka@bnl.gov>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/python-accelerator-middle-layer/pamila"

[tool.poetry.dependencies]
python = ">=3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
